BugzId: 19422 Lower chosen icon vertical alignment

--- a/custom/modules/lib_core/css/chosen-bootstrap.css
+++ b/custom/modules/lib_core/css/chosen-bootstrap.css
@@ -109,6 +109,6 @@
     font-size: 90%;
     opacity: .7;
     text-rendering: auto;
-    vertical-align: text-top;
+    vertical-align: bottom;
     -webkit-font-smoothing: antialiased;
 }
